--- a/htmlpart.html
+++ b/htmlpart.html
@@ -42,7 +42,7 @@
         </div>
     </main>
     <footer>
-        <p>Project by Bianca Cunha</p>
+        <p>Project by Urvi Gaundalkar</p>
     </footer>
 
     <script src="./js/index.js"></script>
